argowf/argowf-manifests/argo-workflows/templates/server/server-deployment.yaml
---
# Source: argo-workflows/templates/server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-argo-workflows-server
  namespace: "argowf"
  labels:
    helm.sh/chart: argo-workflows-0.42.2
    app.kubernetes.io/name: argo-workflows-server
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: server
    app: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: "v3.5.10"
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-workflows-server
      app.kubernetes.io/instance: argo
  template:
    metadata:
      labels:
        helm.sh/chart: argo-workflows-0.42.2
        app.kubernetes.io/name: argo-workflows-server
        app.kubernetes.io/instance: argo
        app.kubernetes.io/component: server
        app: server
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argo-workflows
        app.kubernetes.io/version: "v3.5.10"
    spec:
      serviceAccountName: argo-argo-workflows-server
      containers:
        - name: argo-server
          image: "quay.io/argoproj/argocli:v3.5.10"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          args:
          - server
          - --configmap=argo-argo-workflows-workflow-controller-configmap
          - --auth-mode=server
          - "--secure=false"
          - "--loglevel"
          - "info"
          - "--gloglevel"
          - "0"
          - "--log-format"
          - "text"
          ports:
          - name: web
            containerPort: 2746
          readinessProbe:
            httpGet:
              path: /
              port: 2746
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            {}
          volumeMounts:
          - name: tmp
            mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
      nodeSelector:
        kubernetes.io/os: linux
