argowf/argowf-manifests/argo-workflows/templates/server/server-service.yaml
---
# Source: argo-workflows/templates/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-argo-workflows-server
  namespace: "argowf"
  labels:
    helm.sh/chart: argo-workflows-0.42.2
    app.kubernetes.io/name: argo-workflows-server
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: server
    app: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: "v3.5.10"
spec:
  ports:
  - port: 2746
    targetPort: 2746
  selector:
    app.kubernetes.io/name: argo-workflows-server
    app.kubernetes.io/instance: argo
  sessionAffinity: None
  type: ClusterIP
