argowf/argowf-manifests/argo-workflows/templates/server/server-ingress.yaml
---
# Source: argo-workflows/templates/server/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-argo-workflows-server
  namespace: "argowf"
  labels:
    helm.sh/chart: argo-workflows-0.42.2
    app.kubernetes.io/name: argo-workflows-server
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: server
    app: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argo-workflows
spec:
  ingressClassName: nginx
  rules:
    - host: argowf.sdck.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-argo-workflows-server
                port:
                  number: 2746
  tls:
    - hosts:
      - argowf.sdck.nl
      secretName: argowf-tls
